# sandy

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROMPTS.md  README.md  RESEARCH_LOG.md  SPEC.md  SYNC_TO_DASHBOARD.md  clear_cache_and_reinstall.bat  docker-compose.yml  fix_neon_schema.py  fix_neon_transaction.py  local_sandwiches.sql  local_sandwiches_fixed.sql  migrate_data.bat  migrate_data.sh  migrate_to_neon.md  pyproject.toml  requirements.txt  sandwiches_export.tsv  sandwiches_fixed.tsv  sources_export.tsv  streamlit_app.py  test_neon_connection.py
.claude/: settings.local.json
.streamlit/: config.toml
dashboard/: Dockerfile  README.md  app.py  requirements.txt
dashboard/components/: colors.py  rating_widget.py  (+2 more)
docs/: DASHBOARD_IMPROVEMENT_PLAN.md  DASHBOARD_PROMPTS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  HUMAN_RATINGS.md  PROMPTS.md  RENAME_COMPLETE_SUMMARY.md  RENAME_COMPLETION_REPORT.md  RENAME_REUBEN_TO_SANDY.md  RESEARCH_LOG.md  SPEC.md  rename_to_sandy.ps1
pages/: 0_🎨_Make_Sandwich.py  0_🔍_Forage.py  1_📊_Live_Feed.py  2_🔍_Browser.py  3_📈_Analytics.py  4_🗺️_Exploration.py  4_🗺️_Network.py  5_✨_Interactive.py  5_🧠_How_It_Works.py  6_⚙️_Settings.py  7_👥_Human_Ratings.py  8_🎨_Make_Sandwich.py
prompts/: assembler.txt  curiosity.txt  identifier.txt  personality_preamble.txt  validator.txt
scripts/: browse.py  init_db.py  migrate_db.py  seed_taxonomy.py  test_gemini_models.py
tests/: test_assembler.py  test_llm.py  test_pipeline.py  test_preprocessor.py  test_reuben.py  test_sandy.py  test_validator.py
(+53 files in other folders)
